Fixed button tags wrapped by a tag and contact form button

--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -33,6 +33,7 @@ $duration: 30s;
 #page {
 	position: relative;
 	min-height: 100%;
+	@include prefix( transition, all 0.3s ease-in-out, webkit moz o );
 }
 
 #masthead {
